--- a/yusufstheme.theme.css
+++ b/yusufstheme.theme.css
@@ -1,12 +1,7 @@
 /**
  * @name Yusufs THEME
- * @author ClearVision Team
- * @version 6.3.0
- * @description Highly customizable and beautiful theme for BetterDiscord.
- * @source https://github.com/ClearVision/ClearVision-v6
- * @website https://clearvision.github.io
- * @invite 7pNUC9C
- * @BDEditor Clear Vision
+ * @version 3
+ * @description Made for vencord
 */
 
 @import url('https://clearvision.github.io/ClearVision-v6/main.css');
@@ -14,7 +9,7 @@
 :root {
   --main-color: #2780e6;
   --hover-color: #1e63b3;
-  --success-color: #43b581;
+  --success-color: #003a20;
   --danger-color: #982929;
   --url-color: var(--main-color);
   --background-image: url('https://i.imgur.com/oOaW535.jpg');
@@ -30,7 +25,7 @@
   --background-invert: 0%;
   --background-blur: 0px;
   --background-overlay: rgba(0,0,0,0.6);
-  --user-popout-image: url('https://clearvision.github.io/images/sapphire.jpg');
+  --user-popout-image: url('https://i.ibb.co/wzVQfRv/pxfuel.jpg');
   --user-popout-position: center;
   --user-popout-size: cover;
   --user-popout-repeat: no-repeat;
@@ -41,7 +36,7 @@
   --user-popout-grayscale: 0%;
   --user-popout-invert: 0%;
   --user-popout-blur: 3px;
-  --user-modal-image: url('https://clearvision.github.io/images/sapphire.jpg');
+  --user-modal-image: url('https://clearvision.github.io/images/sapph');
   --user-modal-position: center;
   --user-modal-size: cover;
   --user-modal-repeat: no-repeat;
@@ -52,7 +47,7 @@
   --user-modal-grayscale: 0%;
   --user-modal-invert: 0%;
   --user-modal-blur: 3px;
-  --home-icon: url('https://clearvision.github.io/icons/discord.svg');
+  --home-icon: url('https://clearvision.github.iosvg');
   --home-position: center;
   --home-size: 40px;
   --channel-unread: var(--main-color);
