--- a/yusufstheme.theme.css
+++ b/yusufstheme.theme.css
@@ -4,12 +4,12 @@
  * @description Made for vencord
 */
 
-@import url('https://clearvision.github.io/ClearVision-v6/main.css');
+@import url('https://.github.io/ClearVision-v6/main.css');
 
 :root {
   --main-color: #2780e6;
   --hover-color: #1e63b3;
-  --success-color: #003a20;
+  --success-color: #43b581;
   --danger-color: #982929;
   --url-color: var(--main-color);
   --background-image: url('https://i.imgur.com/oOaW535.jpg');
@@ -36,7 +36,7 @@
   --user-popout-grayscale: 0%;
   --user-popout-invert: 0%;
   --user-popout-blur: 3px;
-  --user-modal-image: url('https://clearvision.github.io/images/sapph');
+  --user-modal-image: url('https://clearvision.github.io/images/sapphire.jpg');
   --user-modal-position: center;
   --user-modal-size: cover;
   --user-modal-repeat: no-repeat;
@@ -47,7 +47,7 @@
   --user-modal-grayscale: 0%;
   --user-modal-invert: 0%;
   --user-modal-blur: 3px;
-  --home-icon: url('https://clearvision.github.iosvg');
+  --home-icon: url('https://clearvision.github.io/icons/discord.svg');
   --home-position: center;
   --home-size: 40px;
   --channel-unread: var(--main-color);
