--- a/yusufstheme.theme.css
+++ b/yusufstheme.theme.css
@@ -4,7 +4,7 @@
  * @description Made for vencord
 */
 
-@import url('https://.github.io/ClearVision-v6/main.css');
+@import url('https://clearvision.github.io/ClearVision-v6/main.css');
 
 :root {
   --main-color: #2780e6;
