--- a/yusufstheme.theme.css
+++ b/yusufstheme.theme.css
@@ -12,7 +12,7 @@
   --success-color: #43b581;
   --danger-color: #982929;
   --url-color: var(--main-color);
-  --background-image: url('https://i.imgur.com/oOaW535.jpg');
+  --background-image: url('https://i.ibb.co/wzVQfRv/pxfuel.jpg');
   --background-shading: 100%;
   --background-position: center;
   --background-size: cover;
